<resources>
    <string name="app_name">AlpiniaTech</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_routines">Routines</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_devices">Devices</string>

    <string name="status_on">On</string>
    <string name="status_off">Off</string>
    <string name="status_open">Open</string>
    <string name="status_close">Close</string>
    <string name="status_opening">Opening</string>
    <string name="status_closing">Closing</string>

    <string name="status_locked">Locked</string>
    <string name="status_unlocked">Unlocked</string>

    <string name="create_room">Create Room</string>
    <string name="modify_room">Update Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="get_room">Get Room</string>
    <string name="get_rooms">Get Rooms</string>
    <string name="result">Result: %1$s</string>

    <!-- Parlante -->
    <string name="status_playing">Playing</string>
    <string name="status_paused">Paused</string>
    <string name="status_previous">Previous song</string>
    <string name="status_next">Next song</string>
    <string name="genre" >Musical Genre</string>
    <string-array name="genres_options">
        <item>Clasica</item>
        <item>Country</item>
        <item>Dance</item>
        <item>Latina</item>
        <item>Pop</item>
        <item>Rock</item>
    </string-array>

    <!-- Horno -->
    <string name="status_temperature">Oven´s Temperature</string>
    <string name="set_temperature">Set Temperature</string>
    <string name="set_grill_mode">Set Grill Mode</string>
    <string name="set_convection_mode">Set Convection Mode</string>
    <string name="set_heat_source">Set Heat Source</string>
    <string-array name="grill_mode_options">
        <item>Off</item>
        <item>Economic</item>
        <item>Complete</item>
    </string-array>
    <string-array name="convection_mode_options">
        <item>Off</item>
        <item>Economic</item>
        <item>Conventional</item>
    </string-array>
    <string-array name="heat_source_options">
        <item>Conventional</item>
        <item>Down</item>
        <item>Up</item>
    </string-array>

    <!-- Air Conditioner -->
    <string name="status_temperature_ac">Air Conditioner`s Temperature</string>
    <string name="set_temperature_ac">Set Temperature</string>
    <string name="cold_mode">Cold</string>
    <string name="fan_mode">Fan</string>
    <string name="heat_mode">Heat</string>
    <string name="fan_speed">Fan Speed</string>
    <string name="horizontal_mov">Horizontal Movements</string>
    <string name="vertical_mov">Vertical Movements</string>
    <string-array name="fan_speed_options">
        <item> Automatic </item>
        <item> 25 % </item>
        <item> 50 % </item>
        <item> 75 % </item>
        <item> 100 % </item>
    </string-array>
    <string-array name="vertical_movs_options">
        <item> Automatic </item>
        <item> 22 degrees </item>
        <item> 45 degrees </item>
        <item> 67 degrees </item>
        <item> 90 degrees </item>
    </string-array>
    <string-array name="horizontal_movs_options">
        <item> Automatic </item>
        <item> -90 degrees </item>
        <item> -45 degrees </item>
        <item> 0 degrees </item>
        <item> 45 degrees </item>
        <item> 90 degrees </item>
    </string-array>

    <!-- Door -->

    <string name="door_title">Door</string>
    <string name="door_open">Open</string>
    <string name="door_close">Close</string>
    <string name="door_block">Lock</string>
    <string name="door_unblock">Unlock</string>

    <!-- Faucet -->
    <string name="faucet_title">Faucet</string>
    <string name="faucet_open">Open</string>
    <string name="faucet_close">Close</string>
    <string-array name="units">
        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>l</item>
        <item>dal</item>
        <item>hl</item>
        <item>kl</item>
    </string-array>


    <string name="blind_title">Blind</string>
    <string name="blind_open">Open</string>
    <string name="blind_close">Close</string>
    <string name="blind_position">Orientation:</string>








    <string name="device_mode">Mode</string>




    <string name="no_results">You don\'t have any homes!</string>

    <!-- Manejo de errores -->
    <string name="error_message">Something went wrong: %1$s [%2$d]</string>
</resources>
