<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/door_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/door_title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/open_button"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:enabled="false"
            android:text="@string/door_open" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/door_close" />

        <Button
            android:id="@+id/block_button"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/door_block" />

        <Button
            android:id="@+id/unblock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/door_unblock" />

    </LinearLayout>


</LinearLayout>