<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/ACImageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp">


            <ImageView
                android:id="@+id/ACImage"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="106dp"
                android:src="@drawable/ic_air_condition" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_temperature_ac"
                    android:textAlignment="center" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_circle" />

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:gravity="center"
                        android:id="@+id/ACTemperatureView"
                        android:text="0"
                        android:textColor="@color/dark"
                        android:textSize="25sp" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ACTemperatureSlider"
            app:layout_constraintTop_toBottomOf="@+id/ACImageLayout">

            <Button
                android:id="@+id/ac_mode_cold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cold_mode" />

            <Button
                android:id="@+id/ac_mode_vent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fan_mode" />

            <Button
                android:id="@+id/ac_mode_heat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heat_mode" />
        </LinearLayout>

        <TextView
            android:id="@+id/ACTemperatureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="36dp"
            android:text="@string/set_temperature_ac"
            app:layout_constraintBottom_toTopOf="@+id/ACFanSpeedTitle"
            app:layout_constraintLeft_toLeftOf="parent" />

        <SeekBar
            android:id="@+id/ACTemperatureSlider"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0in"
            android:layout_height="wrap_content"
            android:max="20"
            android:progress="3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ACTemperatureTitle"
            app:layout_constraintTop_toTopOf="@id/ACTemperatureTitle" />


        <TextView
            android:id="@+id/ACFanSpeedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/fan_speed"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="302dp" />

        <Spinner
            android:id="@+id/ACFanSpeedDDL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ACFanSpeedTitle"
            app:layout_constraintTop_toTopOf="@id/ACFanSpeedTitle"
            android:entries="@array/fan_speed_options" />

        <TextView
            android:id="@+id/ACHorizontalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal_mov"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/ACFanSpeedTitle"
            android:layout_marginTop="40dp" />

        <Spinner
            android:id="@+id/ACHorizontalDDL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ACHorizontalTitle"
            app:layout_constraintLeft_toRightOf="@id/ACHorizontalTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:entries="@array/horizontal_movs_options" />


        <TextView
            android:id="@+id/ACVerticalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/vertical_mov"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ACHorizontalTitle" />

        <Spinner
            android:id="@+id/ACVerticalDDL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ACVerticalTitle"
            app:layout_constraintLeft_toRightOf="@id/ACVerticalTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:entries="@array/vertical_movs_options" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>