<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/blind_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blind_title"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">


        <Button
            android:id="@+id/open_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blind_open"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blind_close"
            android:enabled="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <ProgressBar
            android:id="@+id/currentLevel_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="191dp"
            android:layout_height="39dp"
            android:layout_constraintBottom_toBottomOf="@+id/textView8"
            android:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_constraintTop_toTopOf="@+id/textView8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/percentage_text_blinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:text="@string/blind_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
        android:id="@+id/level_blinds_seekBar"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_constraintBottom_toBottomOf="@+id/max_level"
        android:layout_constraintStart_toEndOf="@+id/max_level"
        android:layout_constraintTop_toTopOf="@+id/max_level" />



    </LinearLayout>

</LinearLayout>