<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">


    <TextView
    android:id="@+id/faucet_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/faucet_title"
    android:textAlignment="center"
    android:textSize="25sp"
    android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_constraintEnd_toStartOf="@+id/faucet_switch"
            android:layout_constraintBottom_toBottomOf="@+id/faucet_switch"
            android:layout_constraintTop_toTopOf="@+id/faucet_switch"
            android:layout_marginEnd="24dp"
            android:text="@string/faucet_open" />

        <Switch
            android:id="@+id/faucet_switch"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"
            android:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_constraintBottom_toBottomOf="@+id/faucet_switch"
            android:layout_constraintStart_toEndOf="@+id/faucet_switch"
            android:layout_constraintTop_toTopOf="@+id/faucet_switch"
            android:layout_marginStart="24dp"
            android:text="@string/faucet_close" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/amount"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/unit_spinner"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:background="#F3F3F3"
            android:entries="@array/units"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="START" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:text="CANCEL" />

    </LinearLayout>


</LinearLayout>